# Slicer

./: CMakeLists.txt  SuperBuild.cmake
Applications/SlicerApp/: CMakeLists.txt  Main.cxx  qSlicerAppMainWindow.cxx
Base/CLI/: CMakeLists.txt
Base/Logic/: CMakeLists.txt
Base/QTCLI/: CMakeLists.txt  vtkSlicerCLIModuleLogic.cxx
Base/QTCore/: CMakeLists.txt  qSlicerAbstractModuleFactoryManager.cxx  qSlicerCoreApplication.cxx  qSlicerCorePythonManager.cxx  qSlicerExtensionsManagerModel.cxx  qSlicerLoadableModuleFactory.cxx  qSlicerPersistentCookieJar.cxx  qSlicerSceneBundleReader.cxx  qSlicerUtils.cxx
Base/QTGUI/: CMakeLists.txt  qSlicerApplication.cxx  qSlicerDataDialog.cxx  qSlicerExtensionsInstallWidget.cxx  qSlicerExtensionsManageWidget.cxx  qSlicerExtensionsManagerWidget.cxx  qSlicerIconEnginePlugin.cxx  qSlicerPythonManager.cxx  qSlicerSaveDataDialog.cxx  qSlicerSettingsViewsPanel.cxx  qSlicerStyle.cxx
CMake/: SlicerBlockFindQtAndCheckVersion.cmake  SlicerBlockInstallDCMTKApps.cmake  SlicerFunctionAddPythonQtResources.cmake  SlicerMacroBuildApplication.cmake  SlicerMacroBuildBaseQtLibrary.cmake  SlicerMacroBuildModuleQtLibrary.cmake  SlicerMacroBuildQtModule.cmake
Libs/ITKFactoryRegistration/: CMakeLists.txt  itkFactoryRegistration.cxx
Libs/MGHImageIO/: CMakeLists.txt  itkMGHImageIO.cxx
Libs/vtkITK/: CMakeLists.txt  vtkITKArchetypeDiffusionTensorImageReaderFile.cxx  vtkITKArchetypeImageSeriesReader.cxx  (+11 more)
Modules/CLI/DWIJointRicianLMMSEFilter/: CMakeLists.txt
SuperBuild/: External_CTK.cmake  External_ITKv4.cmake  External_VTKv6.cmake
(+115 files in other folders)
